# zoomer-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
db/: init.sql
src/: errors.rs  handlers.rs  main.rs  models.rs  rooms.rs  routes.rs
