[package]
name = "zoomer_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "chrono" ] }
dotenv = "0.15.0"
uuid = { version = "1.3.2", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }
chrono = { version = "0.4.24" }
log = "0.4"
pretty_env_logger = "0.4"
